[FIX] fix chatroom collection overflow (css style)
height of '#side > .content > .container' was incorrect

--- a/pong/public/css/side.css
+++ b/pong/public/css/side.css
@@ -37,7 +37,7 @@
 
   overflow-y: scroll;
   position: relative;
-  height: 100%;
+  height: calc(100% - 42px);
 }
 
 #side > .content > .container::-webkit-scrollbar {
